mise en place du header, de la partie fonctionnement sans effets et de la partie restaurants seulement en html

--- a/index.html
+++ b/index.html
@@ -11,10 +11,146 @@
 </head>
 <body>
     <header>
-        
+        <div class="entete">
+            <img class="entete_logo" src="./images/logo/ohmyfood@2x.svg" alt="logo_restaurant">
+        </div>
+
+        <div class="localisation">
+            <div>
+                <i class="fas fa-map-marker-alt"></i>
+                <span>Paris, Belleville</span>
+            </div>
+        </div>
+
     </header>
 
-   
+    <main>
+        <div class="reservation">
+            <h1>Réservez le menu qui vous convient</h1>
+            <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
+            <button class="btn1">Explorer nos restaurants</button>
+        </div>
+
+
+        <section class="fonctionnement">
+            <h2>Fonctionnement</h2>
+            <div class="fonctionnement_choix">
+                <div class="choix">
+                    <div class="nombre">
+                        1
+
+                    </div>
+                    <div class="icone">
+                        <i class="fas fa-mobile-alt"></i>
+
+                    </div>
+                    <div class="description">
+                        <p>Choissisez un restaurant</p>
+                    </div>
+                </div>
+                <div class="choix">
+                    <div class="nombre">
+                        2
+
+                    </div>
+                    <div class="icone">
+                        <i class="fas fa-list-ul"></i>
+
+                    </div>
+                    <div class="description">
+                        <p>Composez votre menu</p>
+                    </div>
+                </div>
+
+                <div class="choix">
+                    <div class="nombre">
+                        3
+
+                    </div>
+                    <div class="icone">
+                        <i class="fas fa-store"></i>
+
+                    </div>
+                    <div class="description">
+                        <p>dégustez au restaurant</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="restaurants">
+            <h2>restaurants</h2>
+            <div class="flyers">
+                <div class="flyer">
+                    <a href="LIEN PAGE HTLM A METTRE PALETTE DU GOUT">
+                        <div class="flyer_photo">
+                            <img src="/images/restaurants/la_palette_du_gout.jpg" alt="Restaurant la palette du goût">
+                        </div>
+                        <div class="flyer_descrip">
+                            <h3 class="flyer_descrip_nom">La palette du goût</h3>
+                            <div class="flyer_decrip_quartier">Ménilmontant</div>
+                            <div class="flyer_descip_favorite">
+                                <i class="far fa-heart"></i>
+                            </div>
+                        </div>
+                        <div class="flyer_nouveau">Nouveau</div>
+                    </a>                            
+                </div>
+
+                <div class="flyer">
+                    <a href="LIEN PAGE HTLM A METTRE LA NOTE ENCHANTEE">
+                        <div class="flyer_photo">
+                            <img src="/images/restaurants/la_note_enchantee.jpg" alt="Restaurant la note enchantée">
+                        </div>
+                        <div class="flyer_descrip">
+                            <h3 class="flyer_descrip_nom">La note enchanté</h3>
+                            <div class="flyer_decrip_quartier">Charonne</div>
+                            <div class="flyer_descip_favorite">
+                                <i class="far fa-heart"></i>
+                            </div>
+                        </div>
+                        <div class="flyer_nouveau">Nouveau</div>
+                    </a>                            
+                </div>
+
+                <div class="flyer">
+                    <a href="LIEN PAGE HTLM A METTRE A LA FRANCAISE">
+                        <div class="flyer_photo">
+                            <img src="/images/restaurants/a_la_francaise.jpg" alt="Restaurant à la française">
+                        </div>
+                        <div class="flyer_descrip">
+                            <h3 class="flyer_descrip_nom">À la française</h3>
+                            <div class="flyer_decrip_quartier">Cité Rouge</div>
+                            <div class="flyer_descip_favorite">
+                                <i class="far fa-heart"></i>
+                            </div>
+                        </div>                    
+                    </a>                            
+                </div>
+
+                <div class="flyer">
+                    <a href="LIEN PAGE HTLM A METTRE LE DELICE DES SENS">
+                        <div class="flyer_photo">
+                            <img src="/images/restaurants/le_delice_des_sens.jpg" alt="Restaurant le délice des sens">
+                        </div>
+                        <div class="flyer_descrip">
+                            <h3 class="flyer_descrip_nom">Le délice des sens</h3>
+                            <div class="flyer_decrip_quartier">Folie-Méricourt</div>
+                            <div class="flyer_descip_favorite">
+                                <i class="far fa-heart"></i>
+                            </div>
+                        </div>                    
+                    </a>                            
+                </div>
+
+                
+
+            </div>
+        </section>
+
+
+    </main>
+
 
 
     <footer>
