--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </section>
 
         <section class="restaurants">
-            <h2>restaurants</h2>
+            <h2>Restaurants</h2>
             <div class="flyers">
                 <div class="flyer">
                     <a href="LIEN PAGE HTLM A METTRE PALETTE DU GOUT">
@@ -89,7 +89,7 @@
                         <div class="flyer_descrip">
                             <h3 class="flyer_descrip_nom">La palette du goût</h3>
                             <div class="flyer_decrip_quartier">Ménilmontant</div>
-                            <div class="flyer_descip_favorite">
+                            <div class="flyer_descrip_favorite">
                                 <i class="far fa-heart"></i>
                             </div>
                         </div>
@@ -105,7 +105,7 @@
                         <div class="flyer_descrip">
                             <h3 class="flyer_descrip_nom">La note enchanté</h3>
                             <div class="flyer_decrip_quartier">Charonne</div>
-                            <div class="flyer_descip_favorite">
+                            <div class="flyer_descrip_favorite">
                                 <i class="far fa-heart"></i>
                             </div>
                         </div>
@@ -121,7 +121,7 @@
                         <div class="flyer_descrip">
                             <h3 class="flyer_descrip_nom">À la française</h3>
                             <div class="flyer_decrip_quartier">Cité Rouge</div>
-                            <div class="flyer_descip_favorite">
+                            <div class="flyer_descrip_favorite">
                                 <i class="far fa-heart"></i>
                             </div>
                         </div>                    
@@ -136,7 +136,7 @@
                         <div class="flyer_descrip">
                             <h3 class="flyer_descrip_nom">Le délice des sens</h3>
                             <div class="flyer_decrip_quartier">Folie-Méricourt</div>
-                            <div class="flyer_descip_favorite">
+                            <div class="flyer_descrip_favorite">
                                 <i class="far fa-heart"></i>
                             </div>
                         </div>                    
@@ -154,6 +154,30 @@
 
 
     <footer>
+        <div class="footer_omf">
+           <span>ohmyfood</span>
+        </div>
+        <div class="footer_liens">
+            <div class="footer_click">
+                <i class="fas fa-utensils"></i>
+                <a href="#">Proposez un restaurant</a>
+            </div>
+
+            <div class="footer_click">
+                <i class="fas fa-hands-helping"></i>
+                <a href="#">Devenir partenaire</a>
+            </div>
+
+            <div class="footer_click">
+                <a href="#">Mentions légales</a>
+            </div>
+
+            <div class="footer_click">
+                <a href="mailto:contact@ohmyfoodrestaurant.com">Contact</a>
+            </div>
+
+
+        </div>
 
 
     </footer>
