structuration scss en dossier et import dans main.scss, adaptation de la page pour tablette et desktop

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <div class="flyer">
                     <a href="LIEN PAGE HTLM A METTRE PALETTE DU GOUT">
                         <div class="flyer_photo">
-                            <img src="/images/restaurants/la_palette_du_gout.jpg" height="180px" width="360px" alt="Restaurant la palette du goût">
+                            <img src="/images/restaurants/la_palette_du_gout.jpg"  alt="Restaurant la palette du goût">
                         </div>
                         <div class="flyer_descrip">
                             <h3 class="flyer_descrip_nom">La palette du goût</h3>
@@ -100,7 +100,7 @@
                 <div class="flyer">
                     <a href="LIEN PAGE HTLM A METTRE LA NOTE ENCHANTEE">
                         <div class="flyer_photo">
-                            <img src="/images/restaurants/la_note_enchantee.jpg" height="180px" width="360px" alt="Restaurant la note enchantée">
+                            <img src="/images/restaurants/la_note_enchantee.jpg" alt="Restaurant la note enchantée">
                         </div>
                         <div class="flyer_descrip">
                             <h3 class="flyer_descrip_nom">La note enchanté</h3>
@@ -116,7 +116,7 @@
                 <div class="flyer">
                     <a href="LIEN PAGE HTLM A METTRE A LA FRANCAISE">
                         <div class="flyer_photo">
-                            <img src="/images/restaurants/a_la_francaise.jpg" height="180px" width="360px" alt="Restaurant à la française">
+                            <img src="/images/restaurants/a_la_francaise.jpg"  alt="Restaurant à la française">
                         </div>
                         <div class="flyer_descrip">
                             <h3 class="flyer_descrip_nom">À la française</h3>
@@ -131,7 +131,7 @@
                 <div class="flyer">
                     <a href="LIEN PAGE HTLM A METTRE LE DELICE DES SENS">
                         <div class="flyer_photo">
-                            <img src="/images/restaurants/le_delice_des_sens.jpg" height="180px" width="360px" alt="Restaurant le délice des sens">
+                            <img src="/images/restaurants/le_delice_des_sens.jpg"  alt="Restaurant le délice des sens">
                         </div>
                         <div class="flyer_descrip">
                             <h3 class="flyer_descrip_nom">Le délice des sens</h3>
