--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <h2>Restaurants</h2>
             <div class="flyers">
                 <div class="flyer">
-                    <a href="LIEN PAGE HTLM A METTRE PALETTE DU GOUT">
+                    <a href="./La_palette_du_gout.html">
                         <div class="flyer_photo">
                             <img src="/images/restaurants/la_palette_du_gout.jpg"  alt="Restaurant la palette du goût">
                         </div>
@@ -98,7 +98,7 @@
                 </div>
 
                 <div class="flyer">
-                    <a href="LIEN PAGE HTLM A METTRE LA NOTE ENCHANTEE">
+                    <a href="./La_note_enchantée.html">
                         <div class="flyer_photo">
                             <img src="/images/restaurants/la_note_enchantee.jpg" alt="Restaurant la note enchantée">
                         </div>
@@ -114,7 +114,7 @@
                 </div>
 
                 <div class="flyer">
-                    <a href="LIEN PAGE HTLM A METTRE A LA FRANCAISE">
+                    <a href="./a_la_française.html">
                         <div class="flyer_photo">
                             <img src="/images/restaurants/a_la_francaise.jpg"  alt="Restaurant à la française">
                         </div>
@@ -129,7 +129,7 @@
                 </div>
 
                 <div class="flyer">
-                    <a href="LIEN PAGE HTLM A METTRE LE DELICE DES SENS">
+                    <a href="./Le_délice_des_sens.html">
                         <div class="flyer_photo">
                             <img src="/images/restaurants/le_delice_des_sens.jpg"  alt="Restaurant le délice des sens">
                         </div>
