début de mise en place html et css sans effets page menu palette du gout, intégration header, photo et titre

--- a/La_palette_du_gout.html
+++ b/La_palette_du_gout.html
@@ -24,9 +24,39 @@
     </header>
 
     <main>
-        <div class="photo_restaurant">
-            <img src="./images/restaurants/la_palette_du_gout.jpg" alt="photo_plat_la_palette_du_gout">
+        <div class="carte_restaurant">
+            <div class="photo_restaurant">
+                <img src="./images/restaurants/la_palette_du_gout.jpg" alt="photo_plat_la_palette_du_gout">
 
+            </div>
+            <div class="menu">
+                <div class="nom_restaurant">
+                    <h1>La palette du goût</h1>
+                    <span>
+                        <i class="far fa-heart"></i>
+                    </span>
+                </div>
+
+                <div class="contenu_menu">
+                    <div class="description_menu">
+                        <div class="menu_sorte">
+                            <h2>entrées</h2>
+                        </div>
+                        <div class="menu_contenu">
+                            <h3>Fricassée d'escargot</h3>
+                            <p>Au piment d'espelette</p>
+                            <p class="menu_prix">25€</p>
+                        </div>
+
+                        <div class="menu_contenu">
+                            <h3>Foie gras de canard mi-cuit</h3>
+                            <p>Et ses copeaux de truffe noire</p>
+                            <p class="menu_prix">35€</p>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
         </div>
 
 
