--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <div class="flyer">
                     <a href="./La_palette_du_gout.html">
                         <div class="flyer_photo">
-                            <img src="/images/restaurants/la_palette_du_gout.jpg"  alt="Restaurant la palette du goût">
+                            <img src="./images/restaurants/la_palette_du_gout.jpg"  alt="Restaurant la palette du goût">
                         </div>
                         <div class="flyer_descrip">
                             <h3 class="flyer_descrip_nom">La palette du goût</h3>
@@ -100,7 +100,7 @@
                 <div class="flyer">
                     <a href="./La_note_enchantée.html">
                         <div class="flyer_photo">
-                            <img src="/images/restaurants/la_note_enchantee.jpg" alt="Restaurant la note enchantée">
+                            <img src="./images/restaurants/la_note_enchantee.jpg" alt="Restaurant la note enchantée">
                         </div>
                         <div class="flyer_descrip">
                             <h3 class="flyer_descrip_nom">La note enchanté</h3>
@@ -116,7 +116,7 @@
                 <div class="flyer">
                     <a href="./a_la_française.html">
                         <div class="flyer_photo">
-                            <img src="/images/restaurants/a_la_francaise.jpg"  alt="Restaurant à la française">
+                            <img src="./images/restaurants/a_la_francaise.jpg"  alt="Restaurant à la française">
                         </div>
                         <div class="flyer_descrip">
                             <h3 class="flyer_descrip_nom">À la française</h3>
@@ -131,7 +131,7 @@
                 <div class="flyer">
                     <a href="./Le_délice_des_sens.html">
                         <div class="flyer_photo">
-                            <img src="/images/restaurants/le_delice_des_sens.jpg"  alt="Restaurant le délice des sens">
+                            <img src="./images/restaurants/le_delice_des_sens.jpg"  alt="Restaurant le délice des sens">
                         </div>
                         <div class="flyer_descrip">
                             <h3 class="flyer_descrip_nom">Le délice des sens</h3>
