--- a/La_palette_du_gout.html
+++ b/La_palette_du_gout.html
@@ -43,19 +43,96 @@
                             <h2>entrées</h2>
                         </div>
                         <div class="menu_contenu">
-                            <h3>Fricassée d'escargot</h3>
-                            <p>Au piment d'espelette</p>
-                            <p class="menu_prix">25€</p>
+                            <div class="menu_plat"> 
+                                <h3>Fricassée d'escargot</h3>
+                                <p>Au piment d'espelette</p>
+                            </div> 
+                                <p class="menu_prix">25€</p>
                         </div>
 
                         <div class="menu_contenu">
-                            <h3>Foie gras de canard mi-cuit</h3>
-                            <p>Et ses copeaux de truffe noire</p>
-                            <p class="menu_prix">35€</p>
+                            <div class="menu_plat"> 
+                                <h3>Foie gras de canard mi-cuit</h3>
+                                <p>Et ses copeaux de truffe noire</p>
+                            </div> 
+                                <p class="menu_prix">35€</p>
+                        </div>
+
+                        <div class="menu_contenu">
+                            <div class="menu_plat"> 
+                                <h3>Oeuf au plat</h3>
+                                <p>Assaisonné à la truffe sur lit de...</p>
+                            </div> 
+                                <p class="menu_prix">20€</p>
                         </div>
 
                     </div>
                 </div>
+
+                <div class="contenu_menu">
+                    <div class="description_menu">
+                        <div class="menu_sorte">
+                            <h2>plats</h2>
+                        </div>
+                        <div class="menu_contenu">
+                            <div class="menu_plat"> 
+                                <h3>Filet de boeuf aux herbes</h3>
+                                <p>Accompagné de sa ribambelle de légu...</p>
+                            </div> 
+                                <p class="menu_prix">40€</p>
+                        </div>
+
+                        <div class="menu_contenu">
+                            <div class="menu_plat"> 
+                                <h3>Parmentier de queue de boeuf</h3>
+                                <p>A la truffe noire sur sa purée de panais</p>
+                            </div> 
+                                <p class="menu_prix">35€</p>
+                        </div>
+
+                        <div class="menu_contenu">
+                            <div class="menu_plat"> 
+                                <h3>Filet de turbo</h3>
+                                <p>Aux agrumes</p>
+                            </div> 
+                                <p class="menu_prix">44€</p>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="contenu_menu">
+                    <div class="description_menu">
+                        <div class="menu_sorte">
+                            <h2>desserts</h2>
+                        </div>
+                        <div class="menu_contenu">
+                            <div class="menu_plat"> 
+                                <h3>Paris-Brest</h3>
+                                <p>Revisité</p>
+                            </div> 
+                                <p class="menu_prix">18€</p>
+                        </div>
+
+                        <div class="menu_contenu">
+                            <div class="menu_plat"> 
+                                <h3>Macaron au chocolat d'exception</h3>
+                                <p>Et glace à la vanille de Madagascar</p>
+                            </div> 
+                                <p class="menu_prix">22€</p>
+                        </div>
+
+                        <div class="menu_contenu">
+                            <div class="menu_plat"> 
+                                <h3>Mousse au chocolat</h3>
+                                <p>Au piment d'espelette et à  la truffe noire</p>
+                            </div> 
+                                <p class="menu_prix">23€</p>
+                        </div>
+
+                    </div>
+                </div>
+                <button class="btn_menu">Commander</button>
             </div>
         </div>
 
