Mise en place de toutes les pages sans effets tous suports, détails à ajuster

--- a/Le_délice_des_sens.html
+++ b/Le_délice_des_sens.html
@@ -12,14 +12,129 @@
 <body>
     <header>
         <div class="entete">
+            <div class="btn_vers_index">
+                <a href="./index.html">
+                    <i class="fas fa-arrow-left"></i>
+                
+                </a>
+            </div>
             <img class="entete_logo" src="./images/logo/ohmyfood@2x.svg" alt="logo_restaurant">
         </div>
+        
     </header>
 
     <main>
+        <div class="carte_restaurant">
+            <div class="photo_restaurant">
+                <img src="./images/restaurants/le_delice_des_sens.jpg" alt="photo_plat_le_délice_du_sens">
 
+            </div>
+            <div class="menu">
+                <div class="nom_restaurant">
+                    <h1>Le délice des sens</h1>
+                    <span>
+                        <i class="far fa-heart"></i>
+                    </span>
+                </div>
 
+                <div class="contenu_menu">
+                    <div class="description_menu">
+                        <div class="menu_sorte">
+                            <h2>entrées</h2>
+                        </div>
+                        <div class="menu_contenu">
+                            <div class="menu_plat"> 
+                                <h3>Tartare de thon</h3>
+                                <p>Assaisonné au yuzu</p>
+                            </div> 
+                                <p class="menu_prix">25€</p>
+                        </div>
 
+                        <div class="menu_contenu">
+                            <div class="menu_plat"> 
+                                <h3>Bouchée de homard croustillant</h3>
+                                <p>Et sa farandole de petits légumes</p>
+                            </div> 
+                                <p class="menu_prix">35€</p>
+                        </div>
+
+                        <div class="menu_contenu">
+                            <div class="menu_plat"> 
+                                <h3>velouté de cèpes</h3>
+                                <p>Aux truffes</p>
+                            </div> 
+                                <p class="menu_prix">20€</p>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="contenu_menu">
+                    <div class="description_menu">
+                        <div class="menu_sorte">
+                            <h2>plats</h2>
+                        </div>
+                        <div class="menu_contenu">
+                            <div class="menu_plat"> 
+                                <h3>Poulet rôti aux herbes de provence</h3>
+                                <p>Et sa crème de truffe</p>
+                            </div> 
+                                <p class="menu_prix">40€</p>
+                        </div>
+
+                        <div class="menu_contenu">
+                            <div class="menu_plat"> 
+                                <h3>Langouste rôtie</h3>
+                                <p>Et ses légumes de saison</p>
+                            </div> 
+                                <p class="menu_prix">35€</p>
+                        </div>
+
+                        <div class="menu_contenu">
+                            <div class="menu_plat"> 
+                                <h3>Côte de boeuf angus</h3>
+                                <p>Et sa purée de panais</p>
+                            </div> 
+                                <p class="menu_prix">44€</p>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="contenu_menu">
+                    <div class="description_menu">
+                        <div class="menu_sorte">
+                            <h2>desserts</h2>
+                        </div>
+                        <div class="menu_contenu">
+                            <div class="menu_plat"> 
+                                <h3>Farandole de desserts</h3>
+                                <p>Du chef</p>
+                            </div> 
+                                <p class="menu_prix">18€</p>
+                        </div>
+
+                        <div class="menu_contenu">
+                            <div class="menu_plat"> 
+                                <h3>Crème brûlée</h3>
+                                <p>Revisitée</p>
+                            </div> 
+                                <p class="menu_prix">22€</p>
+                        </div>
+
+                        <div class="menu_contenu">
+                            <div class="menu_plat"> 
+                                <h3>Tiramisu</h3>
+                                <p>A la noisette</p>
+                            </div> 
+                                <p class="menu_prix">23€</p>
+                        </div>
+
+                    </div>
+                </div>
+                <button class="btn_menu">Commander</button>
+            </div>
+        </div>
     </main>
 
     <footer>
