--- a/La_note_enchantée.html
+++ b/La_note_enchantée.html
@@ -12,14 +12,137 @@
 <body>
     <header>
         <div class="entete">
+            <div class="btn_vers_index">
+                <a href="./index.html">
+                    <i class="fas fa-arrow-left"></i>
+                
+                </a>
+            </div>
             <img class="entete_logo" src="./images/logo/ohmyfood@2x.svg" alt="logo_restaurant">
         </div>
+        
     </header>
 
     <main>
+        <div class="carte_restaurant">
+            <div class="photo_restaurant">
+                <img src="./images/restaurants/la_note_enchantee.jpg" alt="photo_plat_la_note_enchantée">
 
+            </div>
+            <div class="menu">
+                <div class="nom_restaurant">
+                    <h1>La note enchantée</h1>
+                    <span>
+                        <i class="far fa-heart"></i>
+                    </span>
+                </div>
 
+                <div class="contenu_menu">
+                    <div class="description_menu">
+                        <div class="menu_sorte">
+                            <h2>entrées</h2>
+                        </div>
+                        <div class="menu_contenu">
+                            <div class="menu_plat"> 
+                                <h3>Ravioles de foie gras</h3>
+                                <p>Accompagnés de leur crème à la truffe</p>
+                            </div> 
+                                <p class="menu_prix">25€</p>
+                        </div>
 
+                        <div class="menu_contenu">
+                            <div class="menu_plat"> 
+                                <h3>Caviar osciètre</h3>
+                                <p>Sur blini à la farine de blé noir</p>
+                            </div> 
+                                <p class="menu_prix">35€</p>
+                        </div>
+
+                        <div class="menu_contenu">
+                            <div class="menu_plat"> 
+                                <h3>Homard et espuma de...</h3>
+                                <p>Mariné aux zests d'orange</p>
+                            </div> 
+                                <p class="menu_prix">20€</p>
+                        </div>
+
+                        <div class="menu_contenu">
+                            <div class="menu_plat"> 
+                                <h3>Foie gras de canard cuit entier</h3>
+                                <p>Confiture de figue et pain toasté</p>
+                            </div> 
+                                <p class="menu_prix">35€</p>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="contenu_menu">
+                    <div class="description_menu">
+                        <div class="menu_sorte">
+                            <h2>plats</h2>
+                        </div>
+                        <div class="menu_contenu">
+                            <div class="menu_plat"> 
+                                <h3>Noix de coquille Saint-Jacques</h3>
+                                <p>Sur lit de purée de céleri-rave</p>
+                            </div> 
+                                <p class="menu_prix">40€</p>
+                        </div>
+
+                        <div class="menu_contenu">
+                            <div class="menu_plat"> 
+                                <h3>Langoustine poêlée</h3>
+                                <p>Purée de céleri-rave</p>
+                            </div> 
+                                <p class="menu_prix">35€</p>
+                        </div>
+
+                        <div class="menu_contenu">
+                            <div class="menu_plat"> 
+                                <h3>Mijoté de queue de boeuf</h3>
+                                <p>Et riz sauvage aux zests de citron</p>
+                            </div> 
+                                <p class="menu_prix">44€</p>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="contenu_menu">
+                    <div class="description_menu">
+                        <div class="menu_sorte">
+                            <h2>desserts</h2>
+                        </div>
+                        <div class="menu_contenu">
+                            <div class="menu_plat"> 
+                                <h3>Macaron noisette et chocolat</h3>
+                                <p>Glace au caramel brun et sel de Guérande</p>
+                            </div> 
+                                <p class="menu_prix">18€</p>
+                        </div>
+
+                        <div class="menu_contenu">
+                            <div class="menu_plat"> 
+                                <h3>Baba au rhum revisité</h3>
+                                <p>Et glace à la vanille de Madagascar</p>
+                            </div> 
+                                <p class="menu_prix">22€</p>
+                        </div>
+
+                        <div class="menu_contenu">
+                            <div class="menu_plat"> 
+                                <h3>Tarte au citron meringué</h3>
+                                <p>destructurée</p>
+                            </div> 
+                                <p class="menu_prix">23€</p>
+                        </div>
+
+                    </div>
+                </div>
+                <button class="btn_menu">Commander</button>
+            </div>
+        </div>
     </main>
 
     <footer>
