--- a/La_note_enchantée.html
+++ b/La_note_enchantée.html
@@ -60,7 +60,7 @@
 
                         <div class="menu_contenu">
                             <div class="menu_plat"> 
-                                <h3>Homard et espuma de...</h3>
+                                <h3>Homard et espuma de chou-fleur</h3>
                                 <p>Mariné aux zests d'orange</p>
                             </div> 
                                 <p class="menu_prix">20€</p>
