--- a/La_palette_du_gout.html
+++ b/La_palette_du_gout.html
@@ -61,7 +61,7 @@
                         <div class="menu_contenu">
                             <div class="menu_plat"> 
                                 <h3>Oeuf au plat</h3>
-                                <p>Assaisonné à la truffe sur lit de...</p>
+                                <p>Assaisonné à la truffe sur lit de mesclun sauvage</p>
                             </div> 
                                 <p class="menu_prix">20€</p>
                         </div>
@@ -77,7 +77,7 @@
                         <div class="menu_contenu">
                             <div class="menu_plat"> 
                                 <h3>Filet de boeuf aux herbes</h3>
-                                <p>Accompagné de sa ribambelle de légu...</p>
+                                <p>Accompagné de sa ribambelle de légumes poêlés</p>
                             </div> 
                                 <p class="menu_prix">40€</p>
                         </div>
