--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     </div>
                 </div>
 
-                <div class="choix choix--rose">
+                <div class="choix">
                     <div class="nombre">
                         3
 
