--- a/La_note_enchantée.html
+++ b/La_note_enchantée.html
@@ -48,6 +48,11 @@
                                 <p>Accompagnés de leur crème à la truffe</p>
                             </div> 
                                 <p class="menu_prix">25€</p>
+                                <div class="menu_check">
+                                    <div class="menu_check_icone">
+                                        <i class="fas fa-check-circle"></i>
+                                    </div>
+                                </div>
                         </div>
 
                         <div class="menu_contenu">
