--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
     <title>OhMyFood</title>
 </head>
 <body>
+    <!--Début du header-->
     <header>
+        <!--Mise en place du logo-->
         <div class="entete">
             <img class="entete_logo" src="./images/logo/ohmyfood@2x.svg" alt="logo_restaurant">
         </div>
 
+        <!--Mise en place de la localisation-->
         <div class="localisation">
             <div>
                 <i class="fas fa-map-marker-alt"></i>
@@ -23,15 +26,16 @@
         </div>
 
     </header>
-
+    <!--Fin du header-->
+    <!--Début du contenu principal-->
     <main>
+        <!--Mise en place de la recherche des restaurants-->
         <div class="reservation">
             <h1>Réservez le menu qui vous convient</h1>
             <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
             <button class="btn1">Explorer nos restaurants</button>
         </div>
-
-
+        <!--Mise en place des choix de fontionnement-->
         <section class="fonctionnement">
             <h2>Fonctionnement</h2>
             <div class="fonctionnement_choix">
@@ -77,7 +81,7 @@
                 </div>
             </div>
         </section>
-
+        <!--Mise en place des choix de restaurants-->
         <section class="restaurants">
             <h2>Restaurants</h2>
             <div class="flyers">
@@ -142,17 +146,12 @@
                         </div>                    
                     </a>                            
                 </div>
-
-                
-
             </div>
         </section>
-
-
     </main>
+<!--Fin du contenu principal-->
 
-
-
+<!--Début du pied de place-->
     <footer>
         <div class="footer_omf">
            <span>ohmyfood</span>
@@ -175,12 +174,8 @@
             <div class="footer_click">
                 <a href="mailto:contact@ohmyfoodrestaurant.com">Contact</a>
             </div>
-
-
         </div>
-
-
     </footer>
-    
+    <!--Fin du pied de page-->
 </body>
 </html>
