recherche du coeur cliquable non concluante

--- a/La_note_enchantée.html
+++ b/La_note_enchantée.html
@@ -37,7 +37,7 @@
             <div class="menu">
                 <div class="nom_restaurant">
                     <h1>La note enchantée</h1>
-                    <span>
+                    <span class="coeur">
                         <i class="far fa-heart"></i>
                     </span>
                 </div>
@@ -53,7 +53,7 @@
                                 <p>Accompagnés de leur crème à la truffe</p>
                             </div> 
                                 <p class="menu_prix">25€</p>
-                                
+
                                 <div class="menu_check">
                                     <div class="menu_check_icone">
                                         <i class="fas fa-check-circle"></i>
