mise en place du loading spinner de la page d'accueil

--- a/index.html
+++ b/index.html
@@ -10,6 +10,19 @@
     <title>OhMyFood</title>
 </head>
 <body>
+    <!--Mise en place du loading spinner-->
+    <div class="loader">
+        <h1 class="loader_titre">Oh my food ...</h1>
+        <div class="LoaderBalls">
+            <div class="LoaderBalls__item1"></div>
+            <div class="LoaderBalls__item2"></div>
+            <div class="LoaderBalls__item3"></div>
+        </div>
+
+    </div>
+
+
+
     <!--Début du header-->
     <header>
         <!--Mise en place du logo-->
