ajout de la rotation du check à l'ouverture de la coche sur le menu

--- a/La_note_enchantée.html
+++ b/La_note_enchantée.html
@@ -53,7 +53,6 @@
                                 <p>Accompagnés de leur crème à la truffe</p>
                             </div> 
                                 <p class="menu_prix">25€</p>
-
                                 <div class="menu_check">
                                     <div class="menu_check_icone">
                                         <i class="fas fa-check-circle"></i>
@@ -67,6 +66,11 @@
                                 <p>Sur blini à la farine de blé noir</p>
                             </div> 
                                 <p class="menu_prix">35€</p>
+                                <div class="menu_check">
+                                    <div class="menu_check_icone">
+                                        <i class="fas fa-check-circle"></i>
+                                    </div>
+                                </div>
                         </div>
 
                         <div class="menu_contenu">
@@ -75,6 +79,11 @@
                                 <p>Mariné aux zests d'orange</p>
                             </div> 
                                 <p class="menu_prix">20€</p>
+                                <div class="menu_check">
+                                    <div class="menu_check_icone">
+                                        <i class="fas fa-check-circle"></i>
+                                    </div>
+                                </div>
                         </div>
 
                         <div class="menu_contenu">
@@ -83,6 +92,11 @@
                                 <p>Confiture de figue et pain toasté</p>
                             </div> 
                                 <p class="menu_prix">35€</p>
+                                <div class="menu_check">
+                                    <div class="menu_check_icone">
+                                        <i class="fas fa-check-circle"></i>
+                                    </div>
+                                </div>
                         </div>
 
                     </div>
@@ -99,6 +113,11 @@
                                 <p>Sur lit de purée de céleri-rave</p>
                             </div> 
                                 <p class="menu_prix">40€</p>
+                                <div class="menu_check">
+                                    <div class="menu_check_icone">
+                                        <i class="fas fa-check-circle"></i>
+                                    </div>
+                                </div>
                         </div>
 
                         <div class="menu_contenu">
@@ -107,6 +126,11 @@
                                 <p>Purée de céleri-rave</p>
                             </div> 
                                 <p class="menu_prix">35€</p>
+                                <div class="menu_check">
+                                    <div class="menu_check_icone">
+                                        <i class="fas fa-check-circle"></i>
+                                    </div>
+                                </div>
                         </div>
 
                         <div class="menu_contenu">
@@ -115,6 +139,11 @@
                                 <p>Et riz sauvage aux zests de citron</p>
                             </div> 
                                 <p class="menu_prix">44€</p>
+                                <div class="menu_check">
+                                    <div class="menu_check_icone">
+                                        <i class="fas fa-check-circle"></i>
+                                    </div>
+                                </div>
                         </div>
 
                     </div>
@@ -131,6 +160,11 @@
                                 <p>Glace au caramel brun et sel de Guérande</p>
                             </div> 
                                 <p class="menu_prix">18€</p>
+                                <div class="menu_check">
+                                    <div class="menu_check_icone">
+                                        <i class="fas fa-check-circle"></i>
+                                    </div>
+                                </div>
                         </div>
 
                         <div class="menu_contenu">
@@ -139,6 +173,11 @@
                                 <p>Et glace à la vanille de Madagascar</p>
                             </div> 
                                 <p class="menu_prix">22€</p>
+                                <div class="menu_check">
+                                    <div class="menu_check_icone">
+                                        <i class="fas fa-check-circle"></i>
+                                    </div>
+                                </div>
                         </div>
 
                         <div class="menu_contenu">
@@ -147,6 +186,11 @@
                                 <p>destructurée</p>
                             </div> 
                                 <p class="menu_prix">23€</p>
+                                <div class="menu_check">
+                                    <div class="menu_check_icone">
+                                        <i class="fas fa-check-circle"></i>
+                                    </div>
+                                </div>
                         </div>
                     </div>
                 </div>
