--- a/La_palette_du_gout.html
+++ b/La_palette_du_gout.html
@@ -48,6 +48,11 @@
                                 <p>Au piment d'espelette</p>
                             </div> 
                                 <p class="menu_prix">25€</p>
+                                <div class="menu_check">
+                                    <div class="menu_check_icone">
+                                        <i class="fas fa-check-circle"></i>
+                                    </div>
+                                </div>
                         </div>
 
                         <div class="menu_contenu">
@@ -56,6 +61,11 @@
                                 <p>Et ses copeaux de truffe noire</p>
                             </div> 
                                 <p class="menu_prix">35€</p>
+                                <div class="menu_check">
+                                    <div class="menu_check_icone">
+                                        <i class="fas fa-check-circle"></i>
+                                    </div>
+                                </div>
                         </div>
 
                         <div class="menu_contenu">
@@ -64,6 +74,11 @@
                                 <p>Assaisonné à la truffe sur lit de mesclun sauvage</p>
                             </div> 
                                 <p class="menu_prix">20€</p>
+                                <div class="menu_check">
+                                    <div class="menu_check_icone">
+                                        <i class="fas fa-check-circle"></i>
+                                    </div>
+                                </div>
                         </div>
 
                     </div>
@@ -80,6 +95,11 @@
                                 <p>Accompagné de sa ribambelle de légumes poêlés</p>
                             </div> 
                                 <p class="menu_prix">40€</p>
+                                <div class="menu_check">
+                                    <div class="menu_check_icone">
+                                        <i class="fas fa-check-circle"></i>
+                                    </div>
+                                </div>
                         </div>
 
                         <div class="menu_contenu">
@@ -88,6 +108,11 @@
                                 <p>A la truffe noire sur sa purée de panais</p>
                             </div> 
                                 <p class="menu_prix">35€</p>
+                                <div class="menu_check">
+                                    <div class="menu_check_icone">
+                                        <i class="fas fa-check-circle"></i>
+                                    </div>
+                                </div>
                         </div>
 
                         <div class="menu_contenu">
@@ -96,6 +121,11 @@
                                 <p>Aux agrumes</p>
                             </div> 
                                 <p class="menu_prix">44€</p>
+                                <div class="menu_check">
+                                    <div class="menu_check_icone">
+                                        <i class="fas fa-check-circle"></i>
+                                    </div>
+                                </div>
                         </div>
 
                     </div>
@@ -112,6 +142,11 @@
                                 <p>Revisité</p>
                             </div> 
                                 <p class="menu_prix">18€</p>
+                                <div class="menu_check">
+                                    <div class="menu_check_icone">
+                                        <i class="fas fa-check-circle"></i>
+                                    </div>
+                                </div>
                         </div>
 
                         <div class="menu_contenu">
@@ -120,6 +155,11 @@
                                 <p>Et glace à la vanille de Madagascar</p>
                             </div> 
                                 <p class="menu_prix">22€</p>
+                                <div class="menu_check">
+                                    <div class="menu_check_icone">
+                                        <i class="fas fa-check-circle"></i>
+                                    </div>
+                                </div>
                         </div>
 
                         <div class="menu_contenu">
@@ -128,6 +168,11 @@
                                 <p>Au piment d'espelette et à la truffe noire</p>
                             </div> 
                                 <p class="menu_prix">23€</p>
+                                <div class="menu_check">
+                                    <div class="menu_check_icone">
+                                        <i class="fas fa-check-circle"></i>
+                                    </div>
+                                </div>
                         </div>
 
                     </div>
