--- a/Le_délice_des_sens.html
+++ b/Le_délice_des_sens.html
@@ -48,6 +48,11 @@
                                 <p>Assaisonné au yuzu</p>
                             </div> 
                                 <p class="menu_prix">25€</p>
+                                <div class="menu_check">
+                                    <div class="menu_check_icone">
+                                        <i class="fas fa-check-circle"></i>
+                                    </div>
+                                </div>
                         </div>
 
                         <div class="menu_contenu">
@@ -56,6 +61,11 @@
                                 <p>Et sa farandole de petits légumes</p>
                             </div> 
                                 <p class="menu_prix">35€</p>
+                                <div class="menu_check">
+                                    <div class="menu_check_icone">
+                                        <i class="fas fa-check-circle"></i>
+                                    </div>
+                                </div>
                         </div>
 
                         <div class="menu_contenu">
@@ -64,6 +74,11 @@
                                 <p>Aux truffes</p>
                             </div> 
                                 <p class="menu_prix">20€</p>
+                                <div class="menu_check">
+                                    <div class="menu_check_icone">
+                                        <i class="fas fa-check-circle"></i>
+                                    </div>
+                                </div>
                         </div>
 
                     </div>
@@ -80,6 +95,11 @@
                                 <p>Et sa crème de truffe</p>
                             </div> 
                                 <p class="menu_prix">40€</p>
+                                <div class="menu_check">
+                                    <div class="menu_check_icone">
+                                        <i class="fas fa-check-circle"></i>
+                                    </div>
+                                </div>
                         </div>
 
                         <div class="menu_contenu">
@@ -88,6 +108,11 @@
                                 <p>Et ses légumes de saison</p>
                             </div> 
                                 <p class="menu_prix">35€</p>
+                                <div class="menu_check">
+                                    <div class="menu_check_icone">
+                                        <i class="fas fa-check-circle"></i>
+                                    </div>
+                                </div>
                         </div>
 
                         <div class="menu_contenu">
@@ -96,6 +121,11 @@
                                 <p>Et sa purée de panais</p>
                             </div> 
                                 <p class="menu_prix">44€</p>
+                                <div class="menu_check">
+                                    <div class="menu_check_icone">
+                                        <i class="fas fa-check-circle"></i>
+                                    </div>
+                                </div>
                         </div>
 
                     </div>
@@ -112,6 +142,11 @@
                                 <p>Du chef</p>
                             </div> 
                                 <p class="menu_prix">18€</p>
+                                <div class="menu_check">
+                                    <div class="menu_check_icone">
+                                        <i class="fas fa-check-circle"></i>
+                                    </div>
+                                </div>
                         </div>
 
                         <div class="menu_contenu">
@@ -120,6 +155,11 @@
                                 <p>Revisitée</p>
                             </div> 
                                 <p class="menu_prix">22€</p>
+                                <div class="menu_check">
+                                    <div class="menu_check_icone">
+                                        <i class="fas fa-check-circle"></i>
+                                    </div>
+                                </div>
                         </div>
 
                         <div class="menu_contenu">
@@ -128,6 +168,11 @@
                                 <p>A la noisette</p>
                             </div> 
                                 <p class="menu_prix">23€</p>
+                                <div class="menu_check">
+                                    <div class="menu_check_icone">
+                                        <i class="fas fa-check-circle"></i>
+                                    </div>
+                                </div>
                         </div>
 
                     </div>
