--- a/a_la_française.html
+++ b/a_la_française.html
@@ -48,6 +48,11 @@
                                 <p>Aux zests d'orange</p>
                             </div> 
                                 <p class="menu_prix">25€</p>
+                                <div class="menu_check">
+                                    <div class="menu_check_icone">
+                                        <i class="fas fa-check-circle"></i>
+                                    </div>
+                                </div>
                         </div>
 
                         <div class="menu_contenu">
@@ -56,6 +61,11 @@
                                 <p>Carotte, panais, topinambour</p>
                             </div> 
                                 <p class="menu_prix">35€</p>
+                                <div class="menu_check">
+                                    <div class="menu_check_icone">
+                                        <i class="fas fa-check-circle"></i>
+                                    </div>
+                                </div>
                         </div>
 
                         <div class="menu_contenu">
@@ -64,6 +74,11 @@
                                 <p>Revisitée</p>
                             </div> 
                                 <p class="menu_prix">20€</p>
+                                <div class="menu_check">
+                                    <div class="menu_check_icone">
+                                        <i class="fas fa-check-circle"></i>
+                                    </div>
+                                </div>
                         </div>
 
                     </div>
@@ -80,6 +95,11 @@
                                 <p>Accompagné d'une purée de panais</p>
                             </div> 
                                 <p class="menu_prix">40€</p>
+                                <div class="menu_check">
+                                    <div class="menu_check_icone">
+                                        <i class="fas fa-check-circle"></i>
+                                    </div>
+                                </div>
                         </div>
 
                         <div class="menu_contenu">
@@ -88,6 +108,11 @@
                                 <p>Et parmentier de pommes de terre</p>
                             </div> 
                                 <p class="menu_prix">35€</p>
+                                <div class="menu_check">
+                                    <div class="menu_check_icone">
+                                        <i class="fas fa-check-circle"></i>
+                                    </div>
+                                </div>
                         </div>
 
                         <div class="menu_contenu">
@@ -96,6 +121,11 @@
                                 <p>Sur son lit de gnocchis aux légumes</p>
                             </div> 
                                 <p class="menu_prix">44€</p>
+                                <div class="menu_check">
+                                    <div class="menu_check_icone">
+                                        <i class="fas fa-check-circle"></i>
+                                    </div>
+                                </div>
                         </div>
 
                     </div>
@@ -112,6 +142,11 @@
                                 <p>Et purée de noisettes</p>
                             </div> 
                                 <p class="menu_prix">18€</p>
+                                <div class="menu_check">
+                                    <div class="menu_check_icone">
+                                        <i class="fas fa-check-circle"></i>
+                                    </div>
+                                </div>
                         </div>
 
                         <div class="menu_contenu">
@@ -120,6 +155,11 @@
                                 <p>Revisité</p>
                             </div> 
                                 <p class="menu_prix">22€</p>
+                                <div class="menu_check">
+                                    <div class="menu_check_icone">
+                                        <i class="fas fa-check-circle"></i>
+                                    </div>
+                                </div>
                         </div>
 
                         <div class="menu_contenu">
@@ -128,6 +168,11 @@
                                 <p>Myrtilles et pâte d'amande</p>
                             </div> 
                                 <p class="menu_prix">23€</p>
+                                <div class="menu_check">
+                                    <div class="menu_check_icone">
+                                        <i class="fas fa-check-circle"></i>
+                                    </div>
+                                </div>
                         </div>
 
                     </div>
