rectification erreur validateur w3c css

--- a/La_note_enchantée.html
+++ b/La_note_enchantée.html
@@ -73,7 +73,7 @@
 
                         <div class="menu_contenu">
                             <div class="menu_plat"> 
-                                <h3>Homard et espuma de chou-fleur</h3>
+                                <h3>Homard et espuma de...</h3>
                                 <p>Mariné aux zests d'orange</p>
                             </div> 
                                 <p class="menu_prix">20€</p>
@@ -168,7 +168,7 @@
                         <div class="menu_contenu">
                             <div class="menu_plat"> 
                                 <h3>Baba au rhum revisité</h3>
-                                <p>Et glace à la vanille de Madagascar</p>
+                                <p>Avec son coulis de citron</p>
                             </div> 
                                 <p class="menu_prix">22€</p>
                                 <div class="menu_check">
