--- a/Le_délice_des_sens.html
+++ b/Le_délice_des_sens.html
@@ -44,8 +44,8 @@
                         </div>
                         <div class="menu_contenu">
                             <div class="menu_plat"> 
-                                <h3>Tartare de thon</h3>
-                                <p>Assaisonné au yuzu</p>
+                                <h3 class="plat_titre">Tartare de thon</h3>
+                                <p class="plat_accompagnement">Assaisonné au yuzu</p>
                             </div> 
                                 <p class="menu_prix">25€</p>
                                 <div class="menu_check">
